# transfer4D.github.io

./: .gitignore  README.md  index.html
BaselineLetal/: pinnochio_runner.py
BaselineZhangetal/: .polyscope.ini  pinnochio_runner.py
Code/: NRR.py  README.md  embedded_deformation_graph.py  find_connected_components.py  frame_loader.py  pinnochio_runner.py  run_pygel.py
Code/BaselineLetal/: pinnochio_runner.py
Code/BaselineZhangetal/: spectral_clustering.py
Code/NonRigidICP/: loss.py  no-temporal-smooth.yaml  occlusionFusionConfig.yaml  point_render.py
Code/NonRigidICP/cxx/: setup.py
Code/NonRigidICP/model/: loss.py  point_render.py  registration.py  registration_fusion.py
Code/Pinocchio_transfer4d/: embedding_trainsfer4d.cpp
Code/dem-bones/: DemBones.h
Code/evaluationScores/: Lepard.csv  NICP.csv  NRR-Ablations.csv  Skeleton-Embedding-Joints.csv
Code/lepard/: inference.py
Code/lepard/datasets/: utils.py
Code/lepard/models/: backbone.py  loss.py  matching.py  transformer.py
Code/lepard_transfer4d/: inference.py  main.py
Code/lepard_transfer4d/datasets/: _3dmatch.py  _4dmatch.py  dataloader.py
Code/lepard_transfer4d/kernels/: kernel_points.py
Code/lepard_transfer4d/lib/: tester.py  trainer.py
Code/lepard_transfer4d/models/: blocks.py  pipeline.py
Code/src/: .polyscope.ini  NRR.py  README.md  closeholes.mlx  detailed_clustering_ssdr.py  embedded_deformation_graph.py  estimate_joint_location.py  evaluation.py  find_connected_components2.py  imgui.ini  motion_retargeting.py  options.py  pinnochio_runner.py  run_lepard.py  run_motion_model.py  warpfield.py
Code/src/BaselineLetal/: skinning_decomposition.py
Code/src/NonRigidICP/: config.yaml  donkeyDoll.yaml  dt4d.yaml  no-lepard.yaml  run.py
Code/src/dem-bones/: CMakeLists.txt  NumpyReader.cpp  NumpyReader.h  mainCmd.cpp
Code/src/evaluationScores/: Lepard+Confidence+NICP.csv  Lepard+NICP.csv  OcclusionFusion.csv  Skeleton-Embedding-LocalPose.csv  Skeleton-Embedding-Reconstruction.csv
Code/src/model/: dataset.py
Code/src/settings/: custom_settings.py
Code/src/utils/: generate_mask.py  geometry_utils.py  image_proc.py  viz_utils.py
Code/src/vis/: __init__.py  vis_plotly.py  vis_polyscope.py
Code/vis/: vis_matplotlib.py  vis_plotly.py  visualizer.py
static/: quantitiative_samples.txt
static/js/: index.js
static/pdf/: Transfer4D-CVPR-Poster-36x48.pptx
(+12 files in other folders)
